--- a/thjx2017.yml
+++ b/thjx2017.yml
@@ -166,9 +166,9 @@ user_function:
   -
     fct_name: mur_turn
     fct_summary: "Function called during a phase (MUR turn).
-                  If you never call the ``play_mur`` function, you will defend
-                  or attack a random position with a random portion of your
-                  remaining stock."
+                  If you never call the ``play_mur`` function or if your call
+                  takes too long, the worst possible move you could play (given
+                  the current game state) will be automatically played for you."
     fct_ret_type: void
     fct_arg: []
   -
@@ -179,8 +179,9 @@ user_function:
   -
     fct_name: nose_turn
     fct_summary: "Function called during the NOSE turn.
-                  If you never call the ``play_nose`` function, you will choose
-                  a random square from the remaining squares."
+                  If you never call the ``play_nose`` function or if your call
+                  takes too long, the worst possible move you could play (given
+                  the current game state) will be automatically played for you."
     fct_ret_type: void
     fct_arg: []
   -
