--- a/thjx2017.yml
+++ b/thjx2017.yml
@@ -50,6 +50,13 @@ struct:
     str_field:
       - [x, int, "x coordinate (row index)"]
       - [y, int, "y coordinate (column index)"]
+  -
+    str_name: mur_losses
+    str_summary: "losses of a game of NOSE for both roles."
+    str_tuple: yes
+    str_field:
+      - [attacker, int, "The amount lost by the attacker"]
+      - [defender, int, "The amount lost by the defender"]
 
 function:
 
@@ -108,15 +115,13 @@ function:
       - [player, int, "Player identifier."]
   -
     fct_name: mur_compute_stock_loss
-    fct_summary: "Amount of stock lost considering both players' moves."
-    fct_ret_type: int
+    fct_summary: "Amount of stock lost considering the move of the attacker and defender."
+    fct_ret_type: mur_losses
     fct_arg:
-      - [your_position, mur_position, "The position you decided to attack or
-                                       defend."]
-      - [their_position, mur_position, "The position your opponent decided to
-                                        attack or defend."]
-      - [your_amount, int, "The amount of stock you decided to use."]
-      - [their_amount, int, "The amount of stock your opponent decided to use."]
+      - [attacker, mur_position, "The position attacked."]
+      - [defender, mur_position, "The position defended."]
+      - [atk_amount, int, "The amount of stock used on the attacked position."]
+      - [dfd_amount, int, "The amount of stock used on the defended position."]
 
 # Observer for specific phases
 
